# demo-python

./: .gitignore  .gitpod.yml  Dockerfile  Makefile  Pipfile  Pipfile~  README.md  conftest.py  prerequisites.md  pyproject.toml  pytest.ini  requirements.txt  test_app.py
.circleci/: config.yml
.github/workflows/: desktop_web.yml  hosted-execution.yml  mobile_native.yml  mobile_web.yml  python.yml  robot_desktop_web.yml
appium-examples/pytest/: conftest.py
appium-examples/pytest-realdevices/: README.md  conftest.py
best_practice/: README.md  conftest.py
best_practice/desktop_web/: test_add_to_cart.py  test_login_fail.py  test_login_success.py  test_remove_from_cart.py
best_practice/mobile_web/: test_login_fail.py
examples/accessibility/: test_deque.py  test_sa11y.py  test_sauce_bindings.py
examples/appium/: conftest.py  test_login.py
examples/gitpod/: test_appium.py  test_selenium.py
examples/headless/: test_demo.py
examples/playwright/: conftest.py  test_inventory.py  test_login.py
examples/robotframework/: README.md
examples/selenium/: conftest.py  (+1 more)
headless-examples/: test_demo.py
on-boarding-modules/: README.md  requirements.txt
pytest/: instant-sauce-pytest1.py  instant-sauce-pytest2.py  instant-sauce-pytest3.py  instant-sauce-pytest4.py  test_pytest_module1.py  test_pytest_module2.py  test_pytest_module3.py  test_pytest_module4.py
resources/: NotesList.apk
tests/: base_test.py  test_app.py  test_note.py
vanilla/: instant_sauce_pytest1.py
visual-examples/: Pipfile  README.md  webdriver-tests.py
w3c-examples/: requirements.txt
(+121 files in other folders)
